<resources>
    <string name="app_name">Travel Agency</string>
    <string name="head_title">Special Offerings</string>
    <string name="country_name">Brazil</string>
    <string name="purchase">Book</string>
    <string name="price_deal">Pricing:</string>
    <string name="warning_checkout">To finalize your purchase, please complete your payment using a valid credit card</string>
    <string name="summary">You\'ve to pay:</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="finish_payment">Pay Now</string>
    <string name="yy">YY</string>
    <string name="mm">MM</string>
    <string name="cvc">CVC</string>
    <string name="paymt_success">Congratulations!</string>
    <string name="success_paymt_h2">You\'ve successfully booked this package 🤠</string>
    <string name="booking_details">Booking Details</string>
    <string name="congratulations">congratulations</string>
    <string name="destination_image">destination image</string>
</resources>