<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumeBookingActivity">

    <ImageView
        android:id="@+id/iv_resume_paymt_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/congratulations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/tv_resume_paymt_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/paymt_success"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_resume_paymt_banner"
        app:layout_constraintEnd_toEndOf="@id/iv_resume_paymt_banner"
        app:layout_constraintStart_toStartOf="@+id/iv_resume_paymt_banner"
        app:layout_constraintTop_toTopOf="@+id/iv_resume_paymt_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_resume_paymt_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/success_paymt_h2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_resume_paymt_banner"
        app:layout_constraintEnd_toEndOf="@+id/tv_resume_paymt_h1"
        app:layout_constraintStart_toStartOf="@+id/tv_resume_paymt_h1"
        app:layout_constraintTop_toBottomOf="@+id/tv_resume_paymt_h1" />

    <TextView
        android:id="@+id/tv_resume_paymt_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/booking_details"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_resume_paymt_banner" />

    <ImageView
        android:id="@+id/iv_resume_paymt_destination_bn"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/destination_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resume_paymt_h3"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <View
        android:id="@+id/v_item_div"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_resume_paymt_destination_bn" />

    <TextView
        android:id="@+id/tv_resume_paymt_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_item_div"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/tv_resume_paymt_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_resume_paymt_destination"
        app:layout_constraintTop_toBottomOf="@+id/tv_resume_paymt_destination"
        tools:text="08/02 - 10/12 de 2023" />

    <TextView
        android:id="@+id/tv_resume_paymt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_resume_paymt_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_resume_paymt_period"
        tools:text="R$243,99" />

</androidx.constraintlayout.widget.ConstraintLayout>